--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       plugins: [
         function (hook, vm) {
           hook.beforeEach(function (html) {
-            url = 'https://glitch.com/edit/#!/paulhibbitts-glitch-docsify-open-publishing-starter-kit?path=README.md%3A1%3A0'
-            var editHtml = '[:memo: View content on Glitch](' + url + ')\n'
+            url = 'https://glitch.com/edit/#!/paulhibbitts-glitch-docsify-open-publishing-starter-kit?path=' + vm.route.file
+            var editHtml = '[:memo: Edit this Page on Glitch](' + url + ')\n'
 
             return editHtml
               + html
