--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       plugins: [
         function (hook, vm) {
           hook.beforeEach(function (html) {
-            url = 'https://glitch.com/edit/#!/paulhibbitts-glitch-docsify-open-publishing-starter-kit?path=' + vm.route.file
+            url = 'https://glitch.com/edit/#!/paulhibbitts-glitch-docsify-open-publishing-starter-kit' + '?path=' + vm.route.file
             var editHtml = '[:memo: Edit this Page on Glitch](' + url + ')\n'
 
             return editHtml
